fix(core): fix alt text overflowing

--- a/src/components/common/icons/user_icon/user_icon.scss
+++ b/src/components/common/icons/user_icon/user_icon.scss
@@ -5,6 +5,7 @@
 
 	> .image {
 		position: absolute;
+		overflow: hidden;
 		width: 100%;
 		height: 100%;
 
